[package]
name = "async-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.6"
async-task = "4.0.0"
concurrent-queue = "2.0.0"
fastrand = "2.0.0"
futures-lite = "1.11.0"
slab = "0.4.4"

[dev-dependencies]
async-channel = "1.4.1"
async-io = "1.1.9"
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
easy-parallel = "3.1.0"
once_cell = "1.16.0"